# multi-language-tf-model

./: .gitignore  README.md  dataset.csv  vscode.code-workspace
C/: CMakeLists.txt  README.md
C/src/: main.c
CPP/: CMakeLists.txt  README.md  win-10-tf-2-5.patch
CPP/src/: CPP.cpp  main.cpp
LinearRegressionModel/: keras_metadata.pb  saved_model.pb
LinearRegressionModel/variables/: variables.data-00000-of-00001  variables.index
python/: README.md  main.py  requirements.txt
